# nws-severe-api

./: .gitignore  README.md  config_example.py  generate.py  main.py  populate_data.sh  pyproject.toml  run_server_python.sh  run_server_webfs.sh  test.py  update.py
docker/: docker-compose.yaml
templates/: embeds_01.j2
