[tool.poetry]
name = "nws-api"
version = "0.9.0"
description = "A caching frontend for NWS alerts."
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-box = "^7.1.1"
flask-restx = "^1.3.0"
flask = "^3.0.3"
redis = "^5.0.4"
schedule = "^1.2.2"
pymongo = "^4.7.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
humanize = "^4.9.0"
geopandas = "^0.14.4"
matplotlib = "^3.9.0"
contextily = "^1.6.0"
shapely = "^2.0.4"
rich = "^13.7.1"
geoplot = "^0.5.1"
cartopy = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
